# sddm-babysitter

./: Cargo.toml  LICENCE  README.md  flake.nix  module.nix
src/: main.rs  utils.rs
