[package]
name = "sddm-babysitter"
authors = [ "tsrk. <tsrk@tsrk.me>" ]
description = "A daemon to babysit SDDM that will cry if its helper dies"
licence = "MIT"
keywords = [ "linux", "sddm" ]
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.30.1", features = [ "process", "ptrace", "signal" ]}
sysinfo = "0.35.2"
